@@ -1,5 +1,10 @@
 2005-08-03  Laurent Sansonetti  <lrz@gnome.org>
 
+	* lib/alexandria/macui/MainController.rb:
+
+	Clarify the main window's title, display "X unrated books" instead of
+	"X books, X unrated" when all books are unrated.
+
 	* lib/alexandria/.cvsignore,
 	  lib/alexandria/pre-setup.rb,
 	  lib/alexandria/preferences.rb:
